--- a/src/main/webapp/resources/style.css
+++ b/src/main/webapp/resources/style.css
@@ -1,13 +1,6 @@
-/*=================================================
-||				1. Imports
-==================================================*/
+/* IMPORTS */
 @import url(http://fonts.googleapis.com/css?family=Roboto:100,400,700);
 @import url(http://fonts.googleapis.com/css?family=Roboto+Slab);
-
-.nieuws{
-    text-align: center;
-    margin-top: 30px;
-}
 
 .card{
     margin-top: 20px !important;
@@ -24,9 +17,7 @@
     }
 }
 
-/*.navbar{*/
-    /*background-color: #00716C !important;*/
-/*}*/
+/* NAVBAR */
 .navbar-toggle {
     background-color: rgb(96, 201, 235);
     border: 1px solid rgb(96, 201, 235);
@@ -51,10 +42,6 @@
     -webkit-box-shadow: none;
     box-shadow: none;
 }
-/*=================================================
-||				3. Header
-==================================================*/
-/*navbar*/
 .navbar-default .navbar-brand{
     border: 1px solid transparent;
     color: #009cab;
@@ -108,7 +95,7 @@ ul.nav.navbar-nav.navbar-right{
     background: #e8f9ff;
 }
 
-
+/* FOOTER */
 .footer{
     text-align: center;
     padding: 20px;
@@ -131,4 +118,97 @@ ul.nav.navbar-nav.navbar-right{
     float: right;
     background-color: #f04c25;
     border-radius: 4px;
+}
+
+/* INDEX */
+/* INDEX carousel */
+.carousel .carousel-item {
+    height: 65vh;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+}
+
+#carousel-image1 {
+    background-image: url(#{request.contextPath}/resources/images/vliegtuig.jpg);
+    background-position: center center;
+}
+
+#carousel-image2 {
+    background-image: url(#{request.contextPath}/resources/images/bus.jpg);
+    background-position: center center;
+}
+
+/* INDEX zoek reis */
+.zoek-reis{
+    padding-top: 35px;
+    padding-bottom: 60px;
+}
+
+.custom-addon{
+    background: #fff;
+}
+.border-right{
+    border-right: 0px;
+}
+.custom-button{
+    background: #009cab;
+    color: #fff;
+    width: 100%;
+    text-align: center;
+    padding: 10px;
+    font-size: 16px;
+    transition: all .4s ease-in-out;
+}
+.custom-button:hover{
+    background: #009cab;
+    border-color: #009cab;
+    color: #fff;
+}
+.tour .input-group{
+    margin-bottom: 22px;
+}
+
+.custom-btn{
+    color: #FFF;
+    background-color: transparent;
+    border-color: #FFF;
+    border-radius: 0px;
+    text-transform: uppercase;
+    font-size: 20px;
+    font-weight: 400;
+    transition: all .4s ease-in-out;
+}
+.custom-btn:hover{
+    background: #fff;
+    color: #f04c25;
+}
+
+/* INDEX nieuws */
+.nieuws{
+    padding-top: 60px;
+    padding-bottom: 60px;
+    background-color: lightgray;
+}
+
+/* MEDIA QUERIES */
+@media (max-width: 576px) {
+    .carousel-item {
+        height: 40vh;
+    }
+}
+@media (min-width: 768px) {
+    .carousel-item {
+        height: 50vh;
+    }
+}
+@media (min-width: 992px) {
+    .carousel-item {
+        height: 50vh;
+    }
+}
+@media (min-width: 1200px) {
+    .carousel-item {
+        height: 65vh;
+    }
 }
