--- a/src/main/webapp/templates/carousel.xhtml
+++ b/src/main/webapp/templates/carousel.xhtml
@@ -8,22 +8,19 @@
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
             </ol>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="d-block w-100" src="/travelmore/resources/images/vliegtuig.jpg" alt="Vliegtuig"/>
-                    <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-inner" role="listbox">
+                <div id="carousel-image1" class="carousel-item active">
+                    <div class="carousel-caption  d-md-block">
                         <h5>Vliegtuig</h5>
                         <p>Wij bij travelmore bieden kwaliteitsvolle vliegtuig reizen over de hele wereld.</p>
                     </div>
                 </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="/travelmore/resources/images/bus.jpg" alt="Bus"/>
-                    <div class="carousel-caption d-none d-md-block">
+                <div id="carousel-image2" class="carousel-item">
+                    <div class="carousel-caption  d-md-block">
                         <h5>Bus</h5>
                         <p>Wij bij travelmore bieden kwaliteitsvolle busdiensten.</p>
                     </div>
                 </div>
-
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
