--- a/src/main/webapp/templates/defHeader.xhtml
+++ b/src/main/webapp/templates/defHeader.xhtml
@@ -27,23 +27,23 @@
 
                         <ui:fragment rendered="#{ViewController.activeTab=='reizen'}">
                             <li class="nav-item active">
-                                <h:outputLink value = "/travelmore/reizen.xhtml" styleClass="nav-link">Reizen</h:outputLink>
+                                <h:outputLink value = "/travelmore/bezoeker/reizen.xhtml" styleClass="nav-link">Reizen</h:outputLink>
                             </li>
                         </ui:fragment>
                         <ui:fragment rendered="#{ViewController.activeTab!='reizen'}">
                             <li class="nav-item">
-                                <h:outputLink value = "/travelmore/reizen.xhtml" styleClass="nav-link">Reizen</h:outputLink>
+                                <h:outputLink value = "/travelmore/bezoeker/reizen.xhtml" styleClass="nav-link">Reizen</h:outputLink>
                             </li>
                         </ui:fragment>
 
                         <ui:fragment rendered="#{ViewController.activeTab=='bookingen'}">
                             <li class="nav-item active">
-                                <h:outputLink value = "/travelmore/bookingen.xhtml" styleClass="nav-link">Bookingen</h:outputLink>
+                                <h:outputLink value = "/travelmore/gebruiker/bookingen.xhtml" styleClass="nav-link">Bookingen</h:outputLink>
                             </li>
                         </ui:fragment>
                         <ui:fragment rendered="#{ViewController.activeTab!='bookingen'}">
                             <li class="nav-item">
-                                <h:outputLink value = "/travelmore/bookingen.xhtml" styleClass="nav-link">Bookingen</h:outputLink>
+                                <h:outputLink value = "/travelmore/gebruiker/bookingen.xhtml" styleClass="nav-link">Bookingen</h:outputLink>
                             </li>
                         </ui:fragment>
                     </ul>
