--- a/src/main/webapp/templates/adminHeader.xhtml
+++ b/src/main/webapp/templates/adminHeader.xhtml
@@ -3,9 +3,10 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <ui:composition>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="/travelmore/admin/bookingen.xhtml">
-                <h:graphicImage height="80px" library="images" name="headerlogo_transparent.png" />
+        <nav class="navbar navbar-default navbar-expand-md navbar-dark bg-dark navbar-fixed-top">
+            <a class="navbar-brand" href="/travelmore/" title="HOME">
+                <h:graphicImage height="60px" library="images" name="navheader.png" />
+                Travel<span>More</span>Admin
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
